--- a/src/index.css
+++ b/src/index.css
@@ -1,72 +1,95 @@
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-    margin: 0;
-    background: radial-gradient(circle at top, #141b33 0, #050510 55%, #000000 100%);
-    color: #f8f9fa;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  margin: 0;
+  background: radial-gradient(circle at top, #141b33 0, #050510 55%, #000000 100%);
+  color: #f8f9fa;
 }
 
 .navbar {
-    background-color: rgb(21, 21, 21);
+  background-color: rgb(21, 21, 21);
 }
 
 .nav-link,
 .navbar-brand {
-    color: rgb(242, 218, 0);
+  color: rgb(242, 218, 0);
 }
 
 .neon-page {
-    background: radial-gradient(circle at top, #141b33 0, #050510 55%, #000000 100%);
-    color: #f8f9fa;
-    border-radius: 16px;
-    padding: 2rem;
-    box-shadow: 0 0 30px rgba(0, 255, 255, 0.2);
+  background: radial-gradient(circle at top, #141b33 0, #050510 55%, #000000 100%);
+  color: #f8f9fa;
+  border-radius: 16px;
+  padding: 2rem;
+  box-shadow: 0 0 30px rgba(0, 255, 255, 0.2);
 }
 
 .neon-title {
-    margin-bottom: 15px;
-    color: hsl(0, 0%, 0%);
-    text-shadow:
-        0 0 5px #00f6ff,
-        0 0 10px #00f6ff,
-        0 0 20px #00f6ff;
-    letter-spacing: 0.1em;
-    text-transform: uppercase;
+  margin-bottom: 15px;
+  color: hsl(0, 0%, 0%);
+  text-shadow:
+    0 0 5px #00f6ff,
+    0 0 10px #00f6ff,
+    0 0 20px #00f6ff;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
 }
 
 .neon-image-wrapper img {
-    border-radius: 12px;
-    border: 2px solid #ffea00;
-    box-shadow:
-        0 0 10px #ffea00,
-        0 0 20px #ffea00,
-        0 0 40px rgba(255, 234, 0, 0.6);
+  border-radius: 12px;
+  border: 2px solid #ffea00;
+  box-shadow:
+    0 0 10px #ffea00,
+    0 0 20px #ffea00,
+    0 0 40px rgba(255, 234, 0, 0.6);
 }
 
 .neon-list .list-group-item {
-    background: transparent;
-    color: #f8f9fa;
-    border-color: rgba(0, 246, 255, 0.6);
-    box-shadow: 0 0 8px rgba(0, 246, 255, 0.35);
+  background: transparent;
+  color: #f8f9fa;
+  border-color: rgba(0, 246, 255, 0.6);
+  box-shadow: 0 0 8px rgba(0, 246, 255, 0.35);
 }
 
 .characters-details-page {
-    background-color: #000000;
-    color: #f8f9fa;
-    border-radius: 16px;
-    padding: 2rem;
+  background-color: #000000;
+  color: #f8f9fa;
+  border-radius: 16px;
+  padding: 2rem;
 }
 
 
 /* cards of characters */
 
 .neon-card {
-    background-color: rgba(5, 5, 20, 0.95);
-    border: 1px solid #00f6ff;
-    box-shadow:
-        0 0 10px rgba(0, 246, 255, 0.4),
-        0 0 25px rgba(0, 246, 255, 0.2);
-    border-radius: 7px;
-    overflow: hidden;
+  background-color: rgba(5, 5, 20, 0.95);
+  border: 1px solid #00f6ff;
+  box-shadow:
+    0 0 10px rgba(0, 246, 255, 0.4),
+    0 0 25px rgba(0, 246, 255, 0.2);
+  border-radius: 7px;
+  overflow: hidden;
+}
+
+.neon-card-starships {
+  background-color: rgba(5, 5, 20, 0.95);
+  border: 1px solid #00f6ff;
+  box-shadow:
+    0 0 10px rgba(0, 246, 255, 0.4),
+    0 0 25px rgba(0, 246, 255, 0.2);
+  border-radius: 7px;
+  overflow: hidden;
+
+}
+
+.neon-card-starships img {
+  border-bottom: 1px solid rgba(0, 246, 255, 0.4);
+  width: 100%;
+  height: 220px;
+  object-fit: cover;
+  display: block;
+}
+
+.neon-card-starships {
+  color: #ffea00;
 }
 
 .neon-card img {
@@ -87,7 +110,7 @@ body {
 
 .btn-neon:hover,
 .btn-neon:focus {
-  color: #00f6ff;                
+  color: #00f6ff;
   background: rgba(0, 246, 255, 0.12);
   box-shadow:
     0 0 10px #00f6ff,
@@ -127,7 +150,7 @@ body {
     0 0 15px rgba(0, 246, 255, 0.9);
 }
 
-/* Botón del dropdown con el mismo estilo que btn-neon */
+/* Botón dropdown  */
 .navbar-neon .btn-dropdown-neon {
   border: 1px solid #00f6ff;
   color: #00f6ff;
@@ -138,4 +161,18 @@ body {
 .navbar-neon .btn-dropdown-neon:hover {
   color: #00f6ff;
   background: rgba(0, 246, 255, 0.12);
+}
+
+.neon-dropdown {
+  background-color: #020617;
+  border: 1px solid #22d3ee;
+}
+
+.neon-dropdown .dropdown-item:hover {
+  background-color: #22d3ee;
+  color: #020617;
+}
+
+.neon-dropdown .dropdown-item {
+  color: #e5e7eb;
 }
